# utiml-backup

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.txt  setup.cfg
src/backup/: greetings.py  main.py
src/resources/: greetings.cfg
tests/backup/: greetings_test.py  main_test.py
