[metadata]
name = utiml-backup
version = 0.0.1
author = Pau Chorro
description =  backups folder/files into different formats
long_description_content_type='text/markdown'
long_description = file: README.md
keywords = python
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7.12

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    python-json-logger==2.0.1
    semantic-version==2.8.5

[options.packages.find]
where=src

[options.package_data]
* =
    resources/*.cfg

[options.entry_points]
console_scripts =
    utiml-backup = backup.main:main

[options.extras_require]
dev =
    pytest==6.2.4
    pytest-mock==3.6.1
    assertpy==1.1
    boto3-stubs

[tool:pytest]
testpaths =
    tests
    ; integration

[pytest]
norecursedirs=tests/helpers

[flake8]
exclude = .git,*migrations*
max-line-length = 119

[isort]
profile=black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 119
src_paths=src,tests

[bdist_wheel]
python-tag=py37

[coverage:run]
source = src
branch = True
parallel = True

[coverage:report]
show_missing = True
skip_covered = True
exclude_lines =
    if __name__ == .__main__.: